add and modi blog cat

--- a/php-blog/view/front/index.html
+++ b/php-blog/view/front/index.html
@@ -17,7 +17,7 @@
 			<ul class="ab cat">
 				<li>随笔</li>
 				<li>文章</li>
-				<li>123</li>
+				<li>个人记录</li>
 			</ul>	
 				<nav class="header-nav appear">
 					<a href="/" class="header-logo" title="Chalk">Chalk</a>
