--- a/php-blog/view/front/index.html
+++ b/php-blog/view/front/index.html
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" href="./assets/css/light.css">
 	<link rel="stylesheet/less" href="./assets/css/style.less">
 	<script src="http://cdn.bootcss.com/less.js/1.7.0/less.min.js"></script>
+	<style>
+		.article-list-cat{
+			font-size: 14px;
+			vertical-align: -1px;
+		}
+	</style>
 </head>
 <body>
 	<main>
@@ -15,12 +21,12 @@
 			
 			<div class="grid-cell">
 			<ul class="ab cat">
-				<li>随笔</li>
-				<li>文章</li>
-				<li>个人记录</li>
+			<?php foreach($cats as $k=>$v){ ?>
+				<li><a href="index.php?cat_id=<?php echo $v['cat_id']; ?>"><?php echo $v['catname']; ?></a></li>
+			<?php } ?>
 			</ul>	
 				<nav class="header-nav appear">
-					<a href="/" class="header-logo" title="Chalk">Chalk</a>
+					<a href="#" class="header-logo" title="Chalk">Chalk</a>
 					<ul class="header-links">
 						<li>
 							<a href="https://github.com/nielsenramon" rel="noreferrer noopener" target="_blank" title="GitHub">
@@ -28,82 +34,42 @@
 							</a>
 						</li>
 						<li>
-							<a href="/feed.xml" rel="noreferrer noopener" target="_blank" title="博客园">
+							<a href="" rel="noreferrer noopener" target="_blank" title="博客园">
 								<span class="ion-social-wordpress"></span>
 							</a>
 						</li>
 					</ul>
 				</nav>
 				<ul class="article-list">
+				<?php foreach($arts as $k=>$v){ ?>
 					<li class="article-list-item appear">
-						<a href="/posts/introducing-chalk" title="Introducing chalk">
+						<a href="art.php?art_id=<?php echo $v['art_id']; ?>" title="<?php echo $v['title']; ?>">
 							<h5>
-								Introducing chalk
+								<?php echo $v['title']; ?>
 								<span class="icon icon-arrow-right"></span>
 							</h5>
 						</a>
-						<p>Chalk is a high quality, completely customizable, performant and 100% free blog template for Jekyll.</p>
+						<p><?php echo $v['content']; ?></p>
 						<div class="article-list-footer">
 							<span class="article-list-date">
-								October 17, 2016
+								<?php echo $v['pubtime']; ?>
 							</span>
-							<span class="article-list-divider">-</span>
+							<!-- <span class="article-list-divider">-</span>
 							<span class="article-list-minutes">
 								2 minute read
-							</span>
-							<span class="article-list-divider">-</span>
-							<div class="article-list-tags">
-								<a href="/tag/web">web</a>
-								<a href="/tag/jekyll">jekyll</a>
-							</div>
-						</div>
-					</li>
-					<li class="article-list-item appear">
-						<a href="/posts/configuring-chalk" title="How to configure Chalk">
-							<h5>
-								How to configure Chalk
-								<span class="icon icon-arrow-right"></span>
-							</h5>
-						</a>
-						<p>Learn more about the config file for Chalk and how to set it up properly.</p>
-						<div class="article-list-footer">
-							<span class="article-list-date">
-								October 16, 2016
-							</span>
-							<span class="article-list-divider">-</span>
-							<span class="article-list-minutes">
-								4 minute read
-							</span>
-							<span class="article-list-divider">-</span>
-							<div class="article-list-tags">
-								<a href="/tag/web">web</a>
-								<a href="/tag/jekyll">jekyll</a>
-							</div>
-						</div>
-					</li>
-					<li class="article-list-item appear">
-						<a href="/posts/chalk-sample-post-with-all-elements" title="Chalk sample post with all elements">
-							<h5>
-								Chalk sample post with all elements
-								<span class="icon icon-arrow-right"></span>
-							</h5>
-						</a>
-						<p>Have a look at all the predesigned elements you can use in Chalk.</p>
-						<div class="article-list-footer">
-							<span class="article-list-date">
-								October 15, 2016
-							</span>
-							<span class="article-list-divider">-</span>
-							<span class="article-list-minutes">
-								2 minute read
-							</span>
+							</span> -->
 							<span class="article-list-divider">-</span>
 							<div class="article-list-tags">
 								<a href="/tag/design">design</a>
 								<a href="/tag/jekyll">jekyll</a>
 							</div>
+							<span class="article-list-divider">-</span>
+							<div class="article-list-tags article-list-cat">
+								∈ <?php echo $v['catname']; ?>
+							</div>
 						</div>
 					</li>
+				<?php } ?>
 				</ul>
 				<footer class="footer appear">
 					<p>
