add and modi blog

--- a/php-blog/view/front/art.html
+++ b/php-blog/view/front/art.html
@@ -65,8 +65,23 @@
 					</header>
 					<div class="article-content">
 						<?php echo $art['content']; ?>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel aut numquam, molestias, natus incidunt nihil eius consectetur tenetur, eaque architecto ea. Id placeat nihil corporis dolore commodi! Ipsum, cum.
 					</div>
 					</article>
+					<div class="comments">
+						<h3>评论</h3>
+						<p>Chris</p>
+						<p class="com-time">2017.1.1 &nbsp;&nbsp;20:10</p>
+						<div>hello there</div>
+					</div>
+					<div class="user">
+					<form action="" method="post">
+						<p><label><input type="text" placeholder="输入昵称" name="nick"></label></p>
+						<p><label><input type="text" placeholder="输入邮箱" name="email"></label></p>
+						<p><label><textarea placeholder="输入评论" name="content"></textarea></label></p>
+						<p><button type="submit">提交</button></p>
+					</form>
+					</div>
 					<footer class="footer appear">
 						<p>
 							Chalk is a high quality, completely customizable, performant and 100% free
