--- a/php-blog/view/admin/artedit.html
+++ b/php-blog/view/admin/artedit.html
@@ -35,7 +35,7 @@
 			} ?>
 		</select></section>
 		<section><span class="c">内容：</span><textarea name="content" id="" cols="30" rows="5"><?php echo $rs['content'] ?></textarea></section>
-		<section><span>标签：</span><input type="text" name="tag" value=""></section>
+		<section><span>标签：</span><input type="text" name="tag" value="<?php echo $rs['arttag'] ?>"></section>
 		<button type="submit"> 提交 </button>
 	</form>
 	</div>
