--- a/php-blog/view/admin/public_side.html
+++ b/php-blog/view/admin/public_side.html
@@ -11,6 +11,6 @@
 </ul>
 <h4>个人中心</h4>
 <ul>
-	<li><a href="">文章管理</a></li>
-	<li><a href="">发布文章</a></li>
+	<li><a href="">修改密码</a></li>
+	<li><a href="logout.php">退出登录</a></li>
 </ul>
