--- a/php-blog/view/front/index.html
+++ b/php-blog/view/front/index.html
@@ -26,15 +26,15 @@
 			<?php } ?>
 			</ul>	
 				<nav class="header-nav appear">
-					<a href="#" class="header-logo" title="Chalk">Chalk</a>
+					<a href="index.php" class="header-logo" title="Chalk">PajamaCat's Blog</a>
 					<ul class="header-links">
 						<li>
-							<a href="https://github.com/nielsenramon" rel="noreferrer noopener" target="_blank" title="GitHub">
+							<a href="https://github.com/Skura23" rel="noreferrer noopener" target="_blank" title="GitHub">
 								<span class="ion-social-github"></span>
 							</a>
 						</li>
 						<li>
-							<a href="" rel="noreferrer noopener" target="_blank" title="博客园">
+							<a href="http://www.cnblogs.com/skura23/" rel="noreferrer noopener" target="_blank" title="博客园">
 								<span class="ion-social-wordpress"></span>
 							</a>
 						</li>
@@ -85,9 +85,7 @@
 				<?php } } ?>
 				<footer class="footer appear">
 					<p>
-						Chalk is a high quality, completely customizable, performant and 100% free
-						blog template for Jekyll built by
-						<a href="/about" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
+						PajamaCat的个人博客
 					</p>
 				</footer>
 			</div>
