--- a/php-blog/view/admin/public_side.html
+++ b/php-blog/view/admin/public_side.html
@@ -1,13 +1,14 @@
 <h2>Blog Admin</h2>
 <h4>栏目管理</h4>
 <ul>
-	<li><a href="">栏目列表</a></li>
-	<li><a href="">添加栏目</a></li>
+	<li><a href="catlist.php">栏目列表</a></li>
+	<li><a href="catadd.php">添加栏目</a></li>
 </ul>
 <h4>文章管理</h4>
 <ul>
-	<li><a href="">文章管理</a></li>
-	<li><a href="">发布文章</a></li>
+	<li><a href="artlist.php">文章管理</a></li>
+	<li><a href="artadd.php">发布文章</a></li>
+	<li><a href="commlist.php">评论管理</a></li>
 </ul>
 <h4>个人中心</h4>
 <ul>
