--- a/php-blog/view/front/art.html
+++ b/php-blog/view/front/art.html
@@ -20,26 +20,16 @@
 		<div class="grid grid-centered">
 			<div class="grid-cell">
 				<nav class="header-nav appear">
-					<a href="/" class="header-logo" title="Chalk">Chalk</a>
+					<a href="/" class="header-logo" title="Chalk">PajamaCat's Blog</a>
 					<ul class="header-links">
 						<li>
-							<a href="https://twitter.com/nielsenramon" rel="noreferrer noopener" target="_blank" title="Twitter">
-								<span class="icon icon-twitter"></span>
+							<a href="https://github.com/Skura23" rel="noreferrer noopener" target="_blank" title="GitHub">
+								<span class="ion-social-github"></span>
 							</a>
 						</li>
 						<li>
-							<a href="https://github.com/nielsenramon" rel="noreferrer noopener" target="_blank" title="GitHub">
-								<span class="icon icon-github"></span>
-							</a>
-						</li>
-						<li>
-							<a href="https://dribbble.com/nielsenramon" rel="noreferrer noopener" target="_blank" title="Dribbble">
-								<span class="icon icon-dribbble"></span>
-							</a>
-						</li>
-						<li>
-							<a href="/feed.xml" rel="noreferrer noopener" target="_blank" title="RSS">
-								<span class="icon icon-rss"></span>
+							<a href="http://www.cnblogs.com/skura23/" rel="noreferrer noopener" target="_blank" title="博客园">
+								<span class="ion-social-wordpress"></span>
 							</a>
 						</li>
 					</ul>
@@ -93,9 +83,7 @@
 					</div>
 					<footer class="footer appear">
 						<p>
-							Chalk is a high quality, completely customizable, performant and 100% free
-							blog template for Jekyll built by
-							<a href="/about" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
+							PajamaCat的个人博客
 						</p>
 					</footer>
 				</div>
