--- a/php-blog/view/admin/public_side.html
+++ b/php-blog/view/admin/public_side.html
@@ -1,3 +1,7 @@
+<script src="./assets/quill/quill.min.js"></script>
+<link rel="stylesheet" href="./assets/quill/quill.snow.css">
+
+
 <h2>Blog Admin</h2>
 <h4>栏目管理</h4>
 <ul>
