--- a/php-blog/view/admin/public_side.html
+++ b/php-blog/view/admin/public_side.html
@@ -1,5 +1,6 @@
 <script src="./assets/quill/quill.min.js"></script>
 <link rel="stylesheet" href="./assets/quill/quill.snow.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
 <h2>Blog Admin</h2>
