--- a/php-blog/view/admin/artadd.html
+++ b/php-blog/view/admin/artadd.html
@@ -37,7 +37,7 @@
 <body>
 	<?php include 'public_side.html'; ?>
 	<div class="bo"> 
-	<form action="" method="post" enctype="multipart/form-data">
+	<form action="" method="post" enctype="multipart/form-data" id="artForm">
 		<section><span>标题：</span><input type="text" name="title"></section>
 		<section><span>栏目：</span><select name="cat_id" id="">
 			<?php foreach($rs as $k=>$v){
@@ -45,6 +45,7 @@
 			} ?>
 		</select></section><br>
     <div id="form-container">
+      <input name="content" type="hidden">
       <div id="editor-container"></div>
     </div>
 		<!-- <section><span class="c">内容：</span><textarea name="content" id="" cols="30" rows="5"></textarea></section> -->
@@ -52,6 +53,9 @@
 		<section><span>标签：</span><input type="text" name="tag"></section>
 		<button type="submit"> 提交 </button>
 	</form>
+  <form enctype="multipart/form-data" id="imgForm">
+    <input type="file" style="display:none" id="imgInp" onchange="upImg()">
+  </form>
 	</div>
 </body>
 <script>
@@ -65,8 +69,12 @@ var toolbarOptions =
 
 var quill = new Quill('#editor-container', {
   modules: {
-    toolbar: toolbarOptions
-
+    toolbar: {
+      container: toolbarOptions,
+      handlers: {
+        image: imageHandler
+      }
+    }
   },
   placeholder: 'Compose an epic...',
   theme: 'snow'
@@ -74,13 +82,65 @@ var quill = new Quill('#editor-container', {
 
 var toolbar = quill.getModule('toolbar');
 toolbar.addHandler('link', function(value) {
-      if (value) {
-        var href = prompt('Enter the URL');
-        this.quill.format('link', href);
-      } else {
-        this.quill.format('link', false);
+  if (value) {
+    var href = prompt('Enter the URL');
+    this.quill.format('link', href);
+  } else {
+    this.quill.format('link', false);
+  }
+});
+
+/*$('.ql-image').click(function(event) {
+  event.preventDefault();
+});*/
+
+var flag = true;
+function imageHandler(value){
+  if (flag) {
+    $('#imgInp')[0].click();
+  }else{
+    var range = this.quill.getSelection();
+    //var value = prompt('What is the image URL');
+    console.log(value);
+    this.quill.insertEmbed(range.index, 'image', value, Quill.sources.USER);
+    flag = true;
+  }
+}
+
+function upImg(event) {
+    var formData = new FormData($('#imgForm')[0]);
+    formData.append('file',$('#imgInp')[0].files[0]);
+    //console.log($('#imgInp')[0].files[0])
+    //坑点. console.log(formData)会显示为空,但其实值是存在的,f12查看Net tab可以看到数据被上传了
+    //var path = '';
+    $.ajax({
+      url:'imgHandler.php',
+      type: 'POST',
+      data: formData,
+      //这两个设置项必填
+      contentType: false,
+      processData: false,
+      success:function(data){
+        //console.log(data)
+        //flag位置待考虑
+        flag = false;
+        imageHandler(data)
       }
-    });
+    })
+    //return path;
+  };
+
+  $('#artForm')[0].onsubmit = function() {
+    // Populate hidden form on submit
+    var content = document.querySelector('input[name=content]');
+    content.value = JSON.stringify(quill.getContents());
+    
+    //console.log("Submitted", $(form).serialize(), $(form).serializeArray());
+    
+    // No back end to actually submit to!
+    //alert('Open the console to see the submit data!')
+    //return false;
+  };
 
 </script>
 </html>
