--- a/php-blog/view/front/art.html
+++ b/php-blog/view/front/art.html
@@ -7,7 +7,10 @@
 	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="./assets/css/light.css">
 	<link rel="stylesheet/less" href="./assets/css/style.less">
+	<link rel="stylesheet" href="./assets/quill/quill.snow.css">
+	<script src="./assets/quill/quill.min.js"></script>
 	<script src="http://cdn.bootcss.com/less.js/1.7.0/less.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<style>
 		.article-list-cat{
 			font-size: 14px;
@@ -53,9 +56,8 @@
 							</div>
 						</div>
 					</header>
-					<div class="article-content">
+					<div class="article-content ql-editor">
 						<?php echo $art['content']; ?>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel aut numquam, molestias, natus incidunt nihil eius consectetur tenetur, eaque architecto ea. Id placeat nihil corporis dolore commodi! Ipsum, cum.
 					</div>
 					</article>
 					<div class="comments">
