--- a/php-blog/view/front/index.html
+++ b/php-blog/view/front/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="./assets/css/light.css">
 	<link rel="stylesheet/less" href="./assets/css/style.less">
+	<link rel="stylesheet" href="./assets/quill/quill.snow.css">
+	<script src="./assets/quill/quill.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="http://cdn.bootcss.com/less.js/1.7.0/less.min.js"></script>
 	<style>
 		.article-list-cat{
