--- a/php-blog/view/admin/artadd.html
+++ b/php-blog/view/admin/artadd.html
@@ -52,7 +52,8 @@
 		<!-- <section><span class="c">内容：</span><textarea name="content" id="" cols="30" rows="5"></textarea></section> -->
     <!-- <section><span class="c">图片：</span><input name="pic" type="file"></section> -->
 		<section><span>标签：</span><input type="text" name="tag"></section>
-		<button type="submit"> 提交 </button>
+    <button type="submit"> 提交 </button>
+		<button type=""> 取消 </button>
 	</form>
   <form enctype="multipart/form-data" id="imgForm">
     <input type="file" style="display:none" id="imgInp" onchange="upImg()">
