--- a/php-blog/view/admin/artedit.html
+++ b/php-blog/view/admin/artedit.html
@@ -41,6 +41,7 @@
 	<div class="bo"> 
 	<form action="" method="post" enctype="multipart/form-data" id="artForm">
 		<section><span>标题：</span><input type="text" name="title" value="<?php echo $rs['title'] ?>"></section>
+    <section><span>摘要：</span><input type="text" name="subtitle" value="<?php echo $rs['subtitle'] ?>"></section>
 		<section><span>栏目：</span><select name="cat_id" id="">
       <?php foreach($cats as $k=>$v){
         echo '<option value="'.$v['cat_id'].'" '.($v['cat_id']===$rs['cat_id']? "selected='selected'" : '').'>'.$v['catname'].'</option>';
@@ -152,7 +153,7 @@ function upImg(event) {
     //console.log("Submitted", $(form).serialize(), $(form).serializeArray());
     
     // No back end to actually submit to!
-    alert('Open the console to see the submit data!')
+    //alert('Open the console to see the submit data!')
     //return false;
   };
 
