--- a/php-blog/view/admin/public_side.html
+++ b/php-blog/view/admin/public_side.html
@@ -1,7 +1,18 @@
-<script src="./assets/quill/quill.min.js"></script>
+<link rel="stylesheet" href="./assets/ionicons/ionicons.min.css">
+<link rel="stylesheet" href="./assets/css/light.css">
 <link rel="stylesheet" href="./assets/quill/quill.snow.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="./assets/highlight/dracula.css">
+<!-- <link rel="stylesheet/less" href="./assets/css/style.less"> -->
+<script src="./assets/jquery-3.2.1.min.js"></script>
+<script src="./assets/highlight/highlight.min.js"></script>
+<script src="./assets/quill/quill.min.js"></script>
+<script src="./assets/less.min.js"></script>
 
+<style>
+	.ql-snow .ql-editor pre.ql-syntax{
+		background: #282a36;
+	}
+</style>
 
 <h2>Blog Admin</h2>
 <h4>栏目管理</h4>
