--- a/php-blog/assets/css/style.less
+++ b/php-blog/assets/css/style.less
@@ -81,6 +81,7 @@ textarea{
   li{
     padding-right: 25px;
     text-align: right;
+    font-size: 13px;
   }
 }
 .article{
@@ -101,6 +102,9 @@ textarea{
 	padding-bottom: 30px;
 	//border-bottom: @bo;
 }
+.article-list-tags{
+	color: #ada8a8;
+}
 .comments{
 	margin-bottom: 30px;
 	&:not(h4){
@@ -111,6 +115,9 @@ textarea{
 	}
 	.comment{
 		margin-bottom: 20px;
+		.mt2{
+			padding-left: 20px;
+		}
 	}
 }
 .user{
@@ -121,6 +128,7 @@ textarea{
 	input,textarea{
 		padding: 5px;
 		outline: medium;
+		font-size: 12px;
 		&:focus{
 			border: 2px solid #000;
 		}
